syntax = "proto3";

package Hi3Helper.EncTool.Proto.StarRail;

message StarRailGateway {
    string  AssetBundleVersionUpdateUrl         = 7;
    string  LuaBundleVersionUpdateUrl           = 3;
    string  LuaPatchVersion                     = 11;
    string  DesignDataBundleVersionUpdateUrl    = 5;
    string  IFixPatchVersionUpdateUrl           = 1680;
    string  IFixPatchRevision                   = 707;
}